--- a/JupyterExperiment.ipynb
+++ b/JupyterExperiment.ipynb
@@ -18,33 +18,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    day   outlook  temp humidity    wind play\n",
-      "0    D1     Sunny   Hot     High    Weak   No\n",
-      "1    D2     Sunny   Hot     High  Strong   No\n",
-      "2    D3  Overcast   Hot     High    Weak  Yes\n",
-      "3    D4      Rain  Mild     High    Weak  Yes\n",
-      "4    D5      Rain  Cool   Normal    Weak  Yes\n",
-      "5    D6      Rain  Cool   Normal  Strong   No\n",
-      "6    D7  Overcast  Cool   Normal  Strong  Yes\n",
-      "7    D8     Sunny  Mild     High    Weak   No\n",
-      "8    D9     Sunny  Cool   Normal    Weak  Yes\n",
-      "9   D10      Rain  Mild   Normal    Weak  Yes\n",
-      "10  D11     Sunny  Mild   Normal  Strong  Yes\n",
-      "11  D12  Overcast  Mild     High  Strong  Yes\n",
-      "12  D13  Overcast   Hot   Normal    Weak  Yes\n",
-      "13  D14      Rain  Mild     High  Strong   No\n"
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-47-39f9d5c5727a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     69\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     70\u001b[0m \u001b[0mexp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0meksperimen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 71\u001b[1;33m \u001b[0mexp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_dataset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'tennis.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     72\u001b[0m \u001b[1;31m# exp.get_std_dataset()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     73\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdataset\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-47-39f9d5c5727a>\u001b[0m in \u001b[0;36mget_dataset\u001b[1;34m(self, filename)\u001b[0m\n\u001b[0;32m     56\u001b[0m     \u001b[0mnew_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'target'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtarget_data\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m     \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 58\u001b[1;33m     \u001b[1;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdataset\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     59\u001b[0m         \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     60\u001b[0m     \u001b[0mnew_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'feature_names'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.datasets import load_iris\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
@@ -55,15 +47,6 @@
     "  self.dataset = dataset\n",
     "  self.classifier = classifier\n",
     "\n",
-    " def get_dataset(self, filename):\n",
-    "    # readfile, masukin ke dataset\n",
-    "    self.dataset = pd.read_csv(filename)\n",
-    "    print(self.dataset)\n",
-    "#     X = self.dataset[:, 1:]  # select columns 1 through end\n",
-    "#     y = self.dataset[:, 0]\n",
-    "#     print(X)\n",
-    "#     print(y)\n",
-    "    \n",
     " def get_std_dataset(self):\n",
     "    self.dataset = load_iris()\n",
     "    \n",
@@ -85,9 +68,47 @@
     "        'y_test': y_test\n",
     "    }\n",
     "\n",
+    " def get_dataset(self, filename):\n",
+    "    # readfile, masukin ke dataset\n",
+    "    raw_data = pd.read_csv(filename)\n",
+    "\n",
+    "    \n",
+    "    #     df['Type'] = pd.Factor(targets, target_names)\n",
+    "    new_data = {\n",
+    "        'data': [],\n",
+    "        'target_names': np.array(['Yes','No']),\n",
+    "        'feature_names': [],\n",
+    "        'target': []\n",
+    "    }\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    target_data = []\n",
+    "    for target in raw_data['play']:\n",
+    "        if (target=='Yes'):\n",
+    "            target_data.append(0)\n",
+    "        else:\n",
+    "            target_data.append(1)\n",
+    "    \n",
+    "    new_data['target'] = target_data\n",
+    "    data = []\n",
+    "    for row in raw_data:\n",
+    "        data.append(row)\n",
+    "    new_data['feature_names'] = data\n",
+    "    print(new_data)\n",
+    "\n",
+    "\n",
+    "#     X = self.dataset[:, 1:]  # select columns 1 through end\n",
+    "#     y = self.dataset[:, 0]\n",
+    "#     print(X)\n",
+    "#     print(y)\n",
+    "    \n",
+    "    \n",
     "exp = eksperimen()\n",
     "exp.get_dataset('tennis.csv')\n",
     "# exp.get_std_dataset()\n",
+    "print(exp.dataset)\n",
+    "\n",
     "\n",
     "# iris = exp.dataset\n",
     "\n",
