--- a/JupyterExperiment.ipynb
+++ b/JupyterExperiment.ipynb
@@ -11,26 +11,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-47-39f9d5c5727a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     69\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     70\u001b[0m \u001b[0mexp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0meksperimen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 71\u001b[1;33m \u001b[0mexp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_dataset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'tennis.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     72\u001b[0m \u001b[1;31m# exp.get_std_dataset()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     73\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdataset\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-47-39f9d5c5727a>\u001b[0m in \u001b[0;36mget_dataset\u001b[1;34m(self, filename)\u001b[0m\n\u001b[0;32m     56\u001b[0m     \u001b[0mnew_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'target'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtarget_data\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m     \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 58\u001b[1;33m     \u001b[1;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdataset\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     59\u001b[0m         \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     60\u001b[0m     \u001b[0mnew_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'feature_names'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    day   outlook  temp humidity    wind play\n",
+      "0    D1     Sunny   Hot     High    Weak   No\n",
+      "1    D2     Sunny   Hot     High  Strong   No\n",
+      "2    D3  Overcast   Hot     High    Weak  Yes\n",
+      "3    D4      Rain  Mild     High    Weak  Yes\n",
+      "4    D5      Rain  Cool   Normal    Weak  Yes\n",
+      "5    D6      Rain  Cool   Normal  Strong   No\n",
+      "6    D7  Overcast  Cool   Normal  Strong  Yes\n",
+      "7    D8     Sunny  Mild     High    Weak   No\n",
+      "8    D9     Sunny  Cool   Normal    Weak  Yes\n",
+      "9   D10      Rain  Mild   Normal    Weak  Yes\n",
+      "10  D11     Sunny  Mild   Normal  Strong  Yes\n",
+      "11  D12  Overcast  Mild     High  Strong  Yes\n",
+      "12  D13  Overcast   Hot   Normal    Weak  Yes\n",
+      "13  D14      Rain  Mild     High  Strong   No\n",
+      "{'data': [], 'target_names': array(['Yes', 'No'],\n",
+      "      dtype='<U3'), 'feature_names': ['day', 'outlook', 'temp', 'humidity', 'wind', 'play'], 'target': [1, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1]}\n"
      ]
     }
    ],
@@ -41,6 +45,7 @@
     "from sklearn.datasets import load_iris\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.metrics import accuracy_score,confusion_matrix \n",
     "\n",
     "class eksperimen(object):\n",
     " def __init__(self, dataset=None, classifier=None):\n",
@@ -49,18 +54,38 @@
     "\n",
     " def get_std_dataset(self):\n",
     "    self.dataset = load_iris()\n",
+    "\n",
+    " def printmatrix_accuracy_percentage(self):\n",
+    "    predict = self.classifier.predict(X_test)\n",
     "    \n",
-    " def build_clf(self, clf_name):\n",
+    "    # accuracy\n",
+    "    print(accuracy_score(dataset['y_test'],predict))\n",
+    "    \n",
+    "    # metrics confusion\n",
+    "    print(confusion_matrix(dataset['y_test'],predict))\n",
+    "    \n",
+    " def build_clf_percentage(self, clf_name):\n",
     "    if (clf_name == 'dtl'):\n",
     "        self.classifier = DecisionTreeClassifier(max_leaf_nodes=3, random_state=0)\n",
     "    elif (clf_name == 'ann'):\n",
     "        self.classifier = MLPClassifier(solver='lbfgs', alpha=1e-5, \n",
     "                                        hidden_layer_sizes=(5, 2), random_state=1)\n",
-    "    self.classifier.fit(dataset['X_train'],dataset['y_train'])\n",
+    "    # training dengan 90% data   \n",
+    "    self.classifier.fit(self.dataset['X_train'],self.dataset['y_train'])\n",
+    "\n",
+    " def build_clf_full(self,clf_name):\n",
+    "    if (clf_name == 'dtl'):\n",
+    "        self.classifier = DecisionTreeClassifier(max_leaf_nodes=3, random_state=0)\n",
+    "    elif (clf_name == 'ann'):\n",
+    "        self.classifier = MLPClassifier(solver='lbfgs', alpha=1e-5, \n",
+    "                                        hidden_layer_sizes=(5, 2), random_state=1)\n",
+    "        # training dengan full data   \n",
+    "    self.classifier.fit(self.X,self.y)\n",
     "    \n",
     " def split_dataset(self):\n",
-    "    # X adalah data setiap fitur, y adalah target\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0)\n",
+    "    # X adalah data setiap fitur, y adalah target \n",
+    "    # split menjadi 90% training 10% testing\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.1 ,train_size = 0.9)\n",
     "    dataset = {\n",
     "        'X_train': X_train,\n",
     "        'X_test': X_test,\n",
@@ -71,7 +96,7 @@
     " def get_dataset(self, filename):\n",
     "    # readfile, masukin ke dataset\n",
     "    raw_data = pd.read_csv(filename)\n",
-    "\n",
+    "    print(raw_data)\n",
     "    \n",
     "    #     df['Type'] = pd.Factor(targets, target_names)\n",
     "    new_data = {\n",
@@ -107,7 +132,7 @@
     "exp = eksperimen()\n",
     "exp.get_dataset('tennis.csv')\n",
     "# exp.get_std_dataset()\n",
-    "print(exp.dataset)\n",
+    "# print(exp.dataset)\n",
     "\n",
     "\n",
     "# iris = exp.dataset\n",
