--- a/JupyterExperiment.ipynb
+++ b/JupyterExperiment.ipynb
@@ -2,174 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sklearn\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 5.1  3.5  1.4  0.2]\n",
-      " [ 4.9  3.   1.4  0.2]\n",
-      " [ 4.7  3.2  1.3  0.2]\n",
-      " [ 4.6  3.1  1.5  0.2]\n",
-      " [ 5.   3.6  1.4  0.2]\n",
-      " [ 5.4  3.9  1.7  0.4]\n",
-      " [ 4.6  3.4  1.4  0.3]\n",
-      " [ 5.   3.4  1.5  0.2]\n",
-      " [ 4.4  2.9  1.4  0.2]\n",
-      " [ 4.9  3.1  1.5  0.1]\n",
-      " [ 5.4  3.7  1.5  0.2]\n",
-      " [ 4.8  3.4  1.6  0.2]\n",
-      " [ 4.8  3.   1.4  0.1]\n",
-      " [ 4.3  3.   1.1  0.1]\n",
-      " [ 5.8  4.   1.2  0.2]\n",
-      " [ 5.7  4.4  1.5  0.4]\n",
-      " [ 5.4  3.9  1.3  0.4]\n",
-      " [ 5.1  3.5  1.4  0.3]\n",
-      " [ 5.7  3.8  1.7  0.3]\n",
-      " [ 5.1  3.8  1.5  0.3]\n",
-      " [ 5.4  3.4  1.7  0.2]\n",
-      " [ 5.1  3.7  1.5  0.4]\n",
-      " [ 4.6  3.6  1.   0.2]\n",
-      " [ 5.1  3.3  1.7  0.5]\n",
-      " [ 4.8  3.4  1.9  0.2]\n",
-      " [ 5.   3.   1.6  0.2]\n",
-      " [ 5.   3.4  1.6  0.4]\n",
-      " [ 5.2  3.5  1.5  0.2]\n",
-      " [ 5.2  3.4  1.4  0.2]\n",
-      " [ 4.7  3.2  1.6  0.2]\n",
-      " [ 4.8  3.1  1.6  0.2]\n",
-      " [ 5.4  3.4  1.5  0.4]\n",
-      " [ 5.2  4.1  1.5  0.1]\n",
-      " [ 5.5  4.2  1.4  0.2]\n",
-      " [ 4.9  3.1  1.5  0.1]\n",
-      " [ 5.   3.2  1.2  0.2]\n",
-      " [ 5.5  3.5  1.3  0.2]\n",
-      " [ 4.9  3.1  1.5  0.1]\n",
-      " [ 4.4  3.   1.3  0.2]\n",
-      " [ 5.1  3.4  1.5  0.2]\n",
-      " [ 5.   3.5  1.3  0.3]\n",
-      " [ 4.5  2.3  1.3  0.3]\n",
-      " [ 4.4  3.2  1.3  0.2]\n",
-      " [ 5.   3.5  1.6  0.6]\n",
-      " [ 5.1  3.8  1.9  0.4]\n",
-      " [ 4.8  3.   1.4  0.3]\n",
-      " [ 5.1  3.8  1.6  0.2]\n",
-      " [ 4.6  3.2  1.4  0.2]\n",
-      " [ 5.3  3.7  1.5  0.2]\n",
-      " [ 5.   3.3  1.4  0.2]\n",
-      " [ 7.   3.2  4.7  1.4]\n",
-      " [ 6.4  3.2  4.5  1.5]\n",
-      " [ 6.9  3.1  4.9  1.5]\n",
-      " [ 5.5  2.3  4.   1.3]\n",
-      " [ 6.5  2.8  4.6  1.5]\n",
-      " [ 5.7  2.8  4.5  1.3]\n",
-      " [ 6.3  3.3  4.7  1.6]\n",
-      " [ 4.9  2.4  3.3  1. ]\n",
-      " [ 6.6  2.9  4.6  1.3]\n",
-      " [ 5.2  2.7  3.9  1.4]\n",
-      " [ 5.   2.   3.5  1. ]\n",
-      " [ 5.9  3.   4.2  1.5]\n",
-      " [ 6.   2.2  4.   1. ]\n",
-      " [ 6.1  2.9  4.7  1.4]\n",
-      " [ 5.6  2.9  3.6  1.3]\n",
-      " [ 6.7  3.1  4.4  1.4]\n",
-      " [ 5.6  3.   4.5  1.5]\n",
-      " [ 5.8  2.7  4.1  1. ]\n",
-      " [ 6.2  2.2  4.5  1.5]\n",
-      " [ 5.6  2.5  3.9  1.1]\n",
-      " [ 5.9  3.2  4.8  1.8]\n",
-      " [ 6.1  2.8  4.   1.3]\n",
-      " [ 6.3  2.5  4.9  1.5]\n",
-      " [ 6.1  2.8  4.7  1.2]\n",
-      " [ 6.4  2.9  4.3  1.3]\n",
-      " [ 6.6  3.   4.4  1.4]\n",
-      " [ 6.8  2.8  4.8  1.4]\n",
-      " [ 6.7  3.   5.   1.7]\n",
-      " [ 6.   2.9  4.5  1.5]\n",
-      " [ 5.7  2.6  3.5  1. ]\n",
-      " [ 5.5  2.4  3.8  1.1]\n",
-      " [ 5.5  2.4  3.7  1. ]\n",
-      " [ 5.8  2.7  3.9  1.2]\n",
-      " [ 6.   2.7  5.1  1.6]\n",
-      " [ 5.4  3.   4.5  1.5]\n",
-      " [ 6.   3.4  4.5  1.6]\n",
-      " [ 6.7  3.1  4.7  1.5]\n",
-      " [ 6.3  2.3  4.4  1.3]\n",
-      " [ 5.6  3.   4.1  1.3]\n",
-      " [ 5.5  2.5  4.   1.3]\n",
-      " [ 5.5  2.6  4.4  1.2]\n",
-      " [ 6.1  3.   4.6  1.4]\n",
-      " [ 5.8  2.6  4.   1.2]\n",
-      " [ 5.   2.3  3.3  1. ]\n",
-      " [ 5.6  2.7  4.2  1.3]\n",
-      " [ 5.7  3.   4.2  1.2]\n",
-      " [ 5.7  2.9  4.2  1.3]\n",
-      " [ 6.2  2.9  4.3  1.3]\n",
-      " [ 5.1  2.5  3.   1.1]\n",
-      " [ 5.7  2.8  4.1  1.3]\n",
-      " [ 6.3  3.3  6.   2.5]\n",
-      " [ 5.8  2.7  5.1  1.9]\n",
-      " [ 7.1  3.   5.9  2.1]\n",
-      " [ 6.3  2.9  5.6  1.8]\n",
-      " [ 6.5  3.   5.8  2.2]\n",
-      " [ 7.6  3.   6.6  2.1]\n",
-      " [ 4.9  2.5  4.5  1.7]\n",
-      " [ 7.3  2.9  6.3  1.8]\n",
-      " [ 6.7  2.5  5.8  1.8]\n",
-      " [ 7.2  3.6  6.1  2.5]\n",
-      " [ 6.5  3.2  5.1  2. ]\n",
-      " [ 6.4  2.7  5.3  1.9]\n",
-      " [ 6.8  3.   5.5  2.1]\n",
-      " [ 5.7  2.5  5.   2. ]\n",
-      " [ 5.8  2.8  5.1  2.4]\n",
-      " [ 6.4  3.2  5.3  2.3]\n",
-      " [ 6.5  3.   5.5  1.8]\n",
-      " [ 7.7  3.8  6.7  2.2]\n",
-      " [ 7.7  2.6  6.9  2.3]\n",
-      " [ 6.   2.2  5.   1.5]\n",
-      " [ 6.9  3.2  5.7  2.3]\n",
-      " [ 5.6  2.8  4.9  2. ]\n",
-      " [ 7.7  2.8  6.7  2. ]\n",
-      " [ 6.3  2.7  4.9  1.8]\n",
-      " [ 6.7  3.3  5.7  2.1]\n",
-      " [ 7.2  3.2  6.   1.8]\n",
-      " [ 6.2  2.8  4.8  1.8]\n",
-      " [ 6.1  3.   4.9  1.8]\n",
-      " [ 6.4  2.8  5.6  2.1]\n",
-      " [ 7.2  3.   5.8  1.6]\n",
-      " [ 7.4  2.8  6.1  1.9]\n",
-      " [ 7.9  3.8  6.4  2. ]\n",
-      " [ 6.4  2.8  5.6  2.2]\n",
-      " [ 6.3  2.8  5.1  1.5]\n",
-      " [ 6.1  2.6  5.6  1.4]\n",
-      " [ 7.7  3.   6.1  2.3]\n",
-      " [ 6.3  3.4  5.6  2.4]\n",
-      " [ 6.4  3.1  5.5  1.8]\n",
-      " [ 6.   3.   4.8  1.8]\n",
-      " [ 6.9  3.1  5.4  2.1]\n",
-      " [ 6.7  3.1  5.6  2.4]\n",
-      " [ 6.9  3.1  5.1  2.3]\n",
-      " [ 5.8  2.7  5.1  1.9]\n",
-      " [ 6.8  3.2  5.9  2.3]\n",
-      " [ 6.7  3.3  5.7  2.5]\n",
-      " [ 6.7  3.   5.2  2.3]\n",
-      " [ 6.3  2.5  5.   1.9]\n",
-      " [ 6.5  3.   5.2  2. ]\n",
-      " [ 6.2  3.4  5.4  2.3]\n",
-      " [ 5.9  3.   5.1  1.8]]\n",
-      "0.946666666667\n",
-      "[0]\n"
+      "0.946666666667\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: 'a'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-45-47948e4fea81>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m    127\u001b[0m \u001b[0mY\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'No'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'No'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    128\u001b[0m \u001b[0mclf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtree\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDecisionTreeClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 129\u001b[1;33m \u001b[0mclf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mclf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mY\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    130\u001b[0m \u001b[1;31m# ins = [['0','1']]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    131\u001b[0m \u001b[1;31m# predict = clf.predict(ins)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python36-32\\lib\\site-packages\\sklearn\\tree\\tree.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, X, y, sample_weight, check_input, X_idx_sorted)\u001b[0m\n\u001b[0;32m    788\u001b[0m             \u001b[0msample_weight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    789\u001b[0m             \u001b[0mcheck_input\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcheck_input\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 790\u001b[1;33m             X_idx_sorted=X_idx_sorted)\n\u001b[0m\u001b[0;32m    791\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    792\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python36-32\\lib\\site-packages\\sklearn\\tree\\tree.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, X, y, sample_weight, check_input, X_idx_sorted)\u001b[0m\n\u001b[0;32m    114\u001b[0m         \u001b[0mrandom_state\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcheck_random_state\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom_state\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    115\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mcheck_input\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 116\u001b[1;33m             \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mDTYPE\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maccept_sparse\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"csc\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    117\u001b[0m             \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mensure_2d\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    118\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0missparse\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python36-32\\lib\\site-packages\\sklearn\\utils\\validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[1;34m(array, accept_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[0;32m    431\u001b[0m                                       force_all_finite)\n\u001b[0;32m    432\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 433\u001b[1;33m         \u001b[0marray\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0morder\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0morder\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    434\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    435\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mensure_2d\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: 'a'"
      ]
     }
    ],
@@ -223,6 +77,8 @@
     "            self.classifier = MLPClassifier(solver='lbfgs', alpha=1e-5, \n",
     "                                            hidden_layer_sizes=(5, 2), random_state=1)\n",
     "            # training dengan full data   \n",
+    "#         print(self.X)\n",
+    "#         print(self.y)\n",
     "        self.classifier.fit(self.X,self.y)\n",
     "        \n",
     "    def saveModel(self,namaFile):\n",
@@ -277,7 +133,6 @@
     "exp = eksperimen()\n",
     "# exp.get_dataset('tennis.csv', 5)\n",
     "exp.get_std_dataset()\n",
-    "print(exp.X)\n",
     "\n",
     "\n",
     "# iris = exp.dataset\n",
@@ -292,17 +147,20 @@
     "exp.build_clf_full('dtl')\n",
     "# print(exp.classifier)\n",
     "exp.get10FoldCrossValidation()\n",
-    "ins = [[5.1,3.1,1.4,0.1]]\n",
+    "# ins = [[5.1,3.1,1.4,0.1]]\n",
     "\n",
-    "exp.classifyNewIns(ins)"
+    "# exp.classifyNewIns(ins)\n",
+    "\n",
+    "# ternyata bisa nominal ga bisa gan\n",
+    "# from sklearn import tree\n",
+    "# X = [['0', 'a'], ['0', 'b']]\n",
+    "# Y = ['No', 'No']\n",
+    "# clf = tree.DecisionTreeClassifier()\n",
+    "# clf = clf.fit(X, Y)\n",
+    "# ins = [['0','1']]\n",
+    "# predict = clf.predict(ins)\n",
+    "# print(predict)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -328,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
