--- a/Eksperimen_13514033.ipynb
+++ b/Eksperimen_13514033.ipynb
@@ -164,16 +164,11 @@
     "\n",
     "### Penanganan Khusus\n",
     "Penanganan yang kami lakukan pada eksperimen ini, yaitu:\n",
-    "1. Mengubah nilai-nilai nominal pada dataset agar dapat diproses oleh *classifier*, terutama ANN\n",
-    "2. *Missing Attributes* di\n"
+    "1. Mengubah nilai-nilai nominal pada dataset agar dapat diproses oleh *classifier* DTL dan ANN\n",
+    "2. *Missing Attributes* dianggap menjadi sebuah nominal yang sama\n",
+    "3. Untuk setiap nilai nominal yang sama, di-*assign* sebuah value numeric {0,1,2,...}\n",
+    "4. Didapatkanlah data set yang atributnya adalah nilai numeric"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -371,15 +366,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Penjelasan analisis fitur\n",
+    "1. Data ini memiliki banyak fitur (totalnya 14 fitur)\n",
+    "2. Setiap fitur memiliki persebaran klasifikasi yang berbeda-beda\n",
+    "3. Dari pairplot, dapat dilihat bahwa setiap fitur memiliki kekuatan pengaruh yang berbeda-beda terhadap kelas\n",
+    "4. Biarpun pengaruhnya berbeda-beda, tapi setiap fitur memiliki pengaruh terhadap klasifikasi\n",
+    "4. Sehingga pada eksperimen kali ini, kami menggunakan seluruh fitur yang ada"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 5. Konsistensi Model"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "dgfhjk"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -388,10 +395,19 @@
     "## 6. Kesimpulan\n",
     "\n",
     "Pada Eksperimen ini, kesimpulan yang dapat diambil adalah:\n",
-    "1. \n",
-    "2. \n",
-    "3. "
+    "1. Beberapa data perlu dipreproses terlebih dahulu karena data di dunia nyata memiliki missing attribut, dan mungkin formatnya tidak sesuai\n",
+    "2. DTL dengan max_leaf_node=20 menghasilkan akurasi 85,2%\n",
+    "3. ANN dengan 1 hidden layer, 10 node hidden layer menghasilkan akurasi 77,6%\n",
+    "4. DTL pada eksperimen kali ini lebih baik di bandingkan ANN\n",
+    "5. Kekuatan setiap fitur untuk mengklasifikasikan data berbeda-beda, dilihat dari pair plot seaborn"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -410,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
